--- a/html/semantics/selectors/pseudo-classes/focus.html
+++ b/html/semantics/selectors/pseudo-classes/focus.html
@@ -10,12 +10,13 @@
 <button id=button1 type=submit>button1</button>
 <input id=input1>
 <input id=input2 disabled>
+<input id=input3 autofocus>
 <textarea id=textarea1>textarea1</textarea>
 <input type=checkbox id=checkbox1 checked>
 <input type=radio id=radio1 checked>
 
 <script>
-  testSelector(":focus", getElementsByIds([]), "No element has the focus");
+  testSelector(":focus", ["input3"], "input3 has the attribute autofocus");
   document.getElementById("input1").focus(); // set the focus on input1
-  testSelector(":focus", getElementsByIds(["input1"]), "input1 has the focus");
+  testSelector(":focus", ["input1"], "input1 has the focus");
 </script>
