--- a/html/semantics/selectors/pseudo-classes/valid-invalid.html
+++ b/html/semantics/selectors/pseudo-classes/valid-invalid.html
@@ -21,8 +21,20 @@
 <fieldset id=fieldset2>
   <input type=text id=text6 required>
 </fieldset>
+<input type=text id=text7 value="AAA" pattern="[0-9][A-Z]{3}">
+<input type=text id=text8 value="0AAA" pattern="[0-9][A-Z]{3}">
+<input type=number id=number1 value=0 min=1>
+<input type=number id=number2 value=1 min=1>
 
 <script>
-  testSelector(":valid", getElementsByIds(["text1", "form1", "text3", "fieldset1", "text5"]), "':valid' matches elements that satisfy their constraints, <form>s/<fieldset>s with descendants that satisfy their constraints");
-  testSelector(":invalid", getElementsByIds(["text2", "form2", "text4", "fieldset2", "text6"]), "':invalid' matches elements that do not satisfy their constraints, <form>s/<fieldset>s with descendants that do not satisfy their constraints");
+  testSelector(":valid", ["text1", "form1", "text3", "fieldset1", "text5", "text8", "number2"], "':valid' matches elements that satisfy their constraints, <form>s/<fieldset>s with descendants that satisfy their constraints");
+  testSelector(":invalid", ["text2", "form2", "text4", "fieldset2", "text6", "text7", "number1"], "':invalid' matches elements that do not satisfy their constraints, <form>s/<fieldset>s with descendants that do not satisfy their constraints");
+
+  document.getElementById("text7").value="0BBB";
+  testSelector(":valid", ["text1", "form1", "text3", "fieldset1", "text5", "text7", "text8", "number2"], "':valid' matches new elements that satisfy their constraints");
+  testSelector(":invalid", ["text2", "form2", "text4", "fieldset2", "text6", "number1"], "':invalid' doesn't match new elements that satisfy their constraints");
+
+  document.getElementById("text8").value="BBB";
+  testSelector(":valid", ["text1", "form1", "text3", "fieldset1", "text5", "text7", "number2"], "':valid' doesn't match new elements that do not satisfy their constraints");
+  testSelector(":invalid", ["text2", "form2", "text4", "fieldset2", "text6", "text8" "number1"], "':invalid' matches new elements that do not satisfy their constraints");
 </script>
