--- a/html/semantics/selectors/pseudo-classes/inrange-outofrange.html
+++ b/html/semantics/selectors/pseudo-classes/inrange-outofrange.html
@@ -13,6 +13,15 @@
 <input type=number value=11 min=0 max=10 id=number4>
 
 <script>
-  testSelector(":in-range", getElementsByIds(["number1"]), "':in-range' matches all elements that are candidates for constraint validation, have range limitations, and that are neither suffering from an underflow nor suffering from an overflow");
-  testSelector(":out-of-range", getElementsByIds(["number3","number4"]), "':invalid' matches all elements that are candidates for constraint validation, have range limitations, and that are either suffering from an underflow or suffering from an overflow");
+  testSelector(":in-range", ["number1"], "':in-range' matches all elements that are candidates for constraint validation, have range limitations, and that are neither suffering from an underflow nor suffering from an overflow");
+
+  testSelector(":out-of-range", ["number3", "number4"], "':out-of-range' matches all elements that are candidates for constraint validation, have range limitations, and that are either suffering from an underflow or suffering from an overflow");
+
+  document.getElementById("number1").value = -10;
+  testSelector(":in-range", [], "':in-range' update number1's value < min");
+  testSelector(":out-of-range", ["number1", "number3", "number4"], "':out-of-range' update number1's value < min");
+
+  document.getElementById("number3").min = 0;
+  testSelector(":in-range", ["number3"], "':in-range' update number3's min < value");
+  testSelector(":out-of-range", ["number1", "number4"], "':out-of-range' update number3's min < value");
 </script>
