use Ahem font to force the rendering

--- a/html/semantics/text-level-semantics/the-wbr-element/wbr-element-ref.html
+++ b/html/semantics/text-level-semantics/the-wbr-element/wbr-element-ref.html
@@ -2,4 +2,7 @@
 <meta charset=utf-8>
 <title>The wbr element</title>
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org">
-<p>Loremipsumdolorsitamet,consectetur<br>adipisicingelit,seddoeiusmodtempor<br>incididuntutlaboreetdoloremagnaaliqua.Ut<br>enimadminimveniam,quisnostrud<br>exercitationullamcolaborisnisiutaliquipex<br>eacommodoconsequat.Duisauteiruredolor<br>inreprehenderitinvoluptatevelitessecillum<br>doloreeufugiatnullapariatur.Excepteursint<br>occaecatcupidatatnonproident,suntinculpa<br>quiofficiadeseruntmollitanimidestlaborum.</p>
+<style>
+  p {font: 1.25em/1 Ahem;}
+</style>
+<p>Loremipsumdolorsitamet,<br>consecteturadipisicingelit,seddo<br>eiusmodtemporincididuntutlabore<br>etdoloremagnaaliqua.Utenimad<br>minimveniam,quisnostrud<br>exercitationullamcolaborisnisiut<br>aliquipexeacommodoconsequat.<br>Duisauteiruredolorinreprehenderit<br>involuptatevelitessecillumdoloreeu<br>fugiatnullapariatur.Excepteursint<br>occaecatcupidatatnonproident,<br>suntinculpaquiofficiadeserunt<br>mollitanimidestlaborum.</p>
