--- a/custom-elements/creating-and-passing-registries/no-registry-test.html
+++ b/custom-elements/creating-and-passing-registries/no-registry-test.html
@@ -3,6 +3,7 @@
 <head>
 <title>New document without browsing context must not have a registry</title>
 <meta name="author" title="Aleksei Yu. Semenov" href="mailto:a.semenov@unipro.ru">
+<meta name="author" title="Sergey G. Grekhov" href="mailto:sgrekhov@unipro.ru">
 <meta name="assert" content="In all other cases, new documents must not have a registry.">
 <link rel="help" href="http://www.w3.org/TR/custom-elements/#creating-and-passing-registries">
 <script src="/resources/testharness.js"></script>
@@ -21,45 +22,6 @@ test(function() {
         'Registering valid custom element in a document ' +
             'without registry should fail');
 }, 'Document of type other than HTML, not loaded into browsing context, must not have a registry');
-
-
-test(function() {
-    var request = new XMLHttpRequest();
-    request.open('GET', '../resources/blank.xml', false);
-    request.overrideMimeType('text/xml');
-    request.send(null);
-
-    assert_equals(200, request.status, 'Test document is not loaded correctly');
-
-    var doc = request.responseXML;
-    assert_throws(
-        'NotSupportedError',
-        function() { doc.registerElement('x-element'); },
-        'Registering valid custom element in ' +
-            'an XMLHttpRequest\'s response document should fail');
-}, 'XMLHttpRequest\'s synchronous response XML document must not have a registry');
-
-
-async_test(function(t) {
-    var request = new XMLHttpRequest();
-    request.onreadystatechange = t.step_func(function() {
-        if (request.readyState == 4){
-            assert_equals(200, request.status, 'Test document is not loaded correctly');
-            var doc = request.responseXML;
-            assert_throws(
-                'NotSupportedError',
-                function() { doc.registerElement('x-element'); },
-                'Registering valid custom element in ' +
-                    'an XMLHttpRequest\'s response document should fail');
-            t.done();
-        }
-    });
-
-    request.open('GET', '../resources/blank.xml', true);
-    request.overrideMimeType('text/xml');
-    request.send();
-}, 'XMLHttpRequest\'s asynchronous response XML document must not have a registry');
-
 
 async_test(function(t) {
     var request = new XMLHttpRequest();
