--- a/html/semantics/text-level-semantics/the-wbr-element/wbr-element-ref.html
+++ b/html/semantics/text-level-semantics/the-wbr-element/wbr-element-ref.html
@@ -2,7 +2,8 @@
 <meta charset=utf-8>
 <title>The wbr element</title>
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org">
+<meta name="flags" content="ahem">
 <style>
-  p {font: 1.25em/1 Ahem;}
+  p {font-family: Ahem;}
 </style>
-<p>Loremipsumdolorsitamet,<br>consecteturadipisicingelit,seddo<br>eiusmodtemporincididuntutlabore<br>etdoloremagnaaliqua.Utenimad<br>minimveniam,quisnostrud<br>exercitationullamcolaborisnisiut<br>aliquipexeacommodoconsequat.<br>Duisauteiruredolorinreprehenderit<br>involuptatevelitessecillumdoloreeu<br>fugiatnullapariatur.Excepteursint<br>occaecatcupidatatnonproident,<br>suntinculpaquiofficiadeserunt<br>mollitanimidestlaborum.</p>
+<p>Loremipsumdolorsit<br>amet,consectetur<br>adipisicingelit,sed<br>doeiusmodtempor<br>incididuntutlaboreet<br>doloremagnaaliqua.Ut<br>enimadminimveniam,<br>quisnostrud<br>exercitationullamco<br>laborisnisiutaliquip<br>exeacommodo<br>consequat.Duisaute<br>iruredolorin<br>reprehenderitin<br>voluptatevelitesse<br>cillumdoloreeufugiat<br>nullapariatur.<br>Excepteursint<br>occaecatcupidatatnon<br>proident,suntinculpa<br>quiofficiadeserunt<br>mollitanimidest<br>laborum.</p>
