--- a/html/semantics/forms/the-datalist-element/datalistoptions.html
+++ b/html/semantics/forms/the-datalist-element/datalistoptions.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <meta charset=utf-8>
-<title></title>
+<title>Datalist element options</title>
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org">
-<link rel=help href="">
+<link rel=help href="http://www.whatwg.org/html/#the-datalist-element">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
@@ -11,13 +11,15 @@
   <input list=numbers>
 </label>
 <datalist id=numbers>
-  <select id=num>
-    <option label="zero" value="0">
-    <option label="one" value="1">
-    <option label="two">2
-    <option label="three" disabled>3
-    <option>
-  </select>
+  <label> Select number:
+    <select id=num>
+      <option label="zero" value="0">
+      <option label="one" value="1">
+      <option label="two">2
+      <option label="three" disabled>3
+      <option>
+    </select>
+  </label>
 </datalist>
 <script>
   test(function(){
