add tests for value flag mode is in default/value mode

--- a/html/semantics/forms/the-output-element/output.html
+++ b/html/semantics/forms/the-output-element/output.html
@@ -11,24 +11,29 @@
   var output = document.getElementById("output");
 
   test(function(){
-    assert_equals(output.type, "output", "output.type must return the string 'output'");
-    assert_equals(output.textContent, "", "output.textContent is empty");
-    assert_equals(output.value, "", "output is empty: output.value should be empty");
-    assert_equals(output.defaultValue, "", "output is empty: output.defaultValue should be empty");
+    assert_equals(output.type, "output", "type must return the string 'output'");
+    assert_equals(output.textContent, "", "textContent is empty");
+    assert_equals(output.value, "", "value should be empty");
+    assert_equals(output.defaultValue, "", "defaultValue should be empty");
 
     output.textContent="5";
-    assert_equals(output.value, "5", "output is 5: value should be 5");
-    assert_equals(output.textContent, "5", "output is 5: textContent should be 5");
-    assert_equals(output.defaultValue, "5", "output is 5: defaultValue should be 5");
+    assert_equals(output.value, "5", "textContent is set to 5: value is updated");
+    assert_equals(output.textContent, "5", "textContent is set to 5");
+    assert_equals(output.defaultValue, "5", "textContent is set to 5: defaultValue is updated");
+
+    output.defaultValue="10"; // value mode flag is in "default" mode. Setting defaultValue should set textContent as well
+    assert_equals(output.value, "10", "defaultValue is set to 10: value is updated");
+    assert_equals(output.textContent, "10", "defaultValue is set to 10: textContent is updated");
+    assert_equals(output.defaultValue, "10", "defaultValue is set to 10");
 
     output.value="20";  // set the value mode flag to "value": default value remains unchanged
-    assert_equals(output.value, "20", "output value set to 20");
-    assert_equals(output.textContent, "20", "output value set to 20: textContent should be 20");
-    assert_equals(output.defaultValue, "5", "output value set to 20: defaultValue should still be 5");
+    assert_equals(output.value, "20", "value is set to 20");
+    assert_equals(output.textContent, "20", "value is set to 20: textContent is updated");
+    assert_equals(output.defaultValue, "10", "value is set to 20: defaultValue remains unchanged");
 
-    output.defaultValue="10";
-    assert_equals(output.value, "20", "output default value set to 10: value remains unchanged");
-    assert_equals(output.textContent, "20", "output default value set to 10: textContent remains unchanged");
-    assert_equals(output.defaultValue, "10", "output default value set to 10");
+    output.defaultValue="15"; // value mode flag is in "value" mode. textContent remains unchanged when setting defaultValue
+    assert_equals(output.value, "20", "defaultValue is set to 15: value remains unchanged");
+    assert_equals(output.textContent, "20", "defaultValue is set to 15: textContent remains unchanged");
+    assert_equals(output.defaultValue, "15", "defaultValue is set to 15");
   }, "output value and defaultValue");
 </script>
