Update pull request #693
1. Add tests to check the child browsing context by frame, object and embed elements
2. Rename files and etc

Signed-off-by: xiaojunwu <xiaojunx.a.wu@intel.com>

--- a/html/browsers/the-window-object/accessing-other-browsing-contexts/test3.html
+++ b/html/browsers/the-window-object/accessing-other-browsing-contexts/test3.html
@@ -2,11 +2,7 @@
 <meta charset="utf-8">
 <title>HTML Test: Accessing other browsing contexts</title>
 <link rel="author" title="Intel" href="http://www.intel.com/" />
-<table id="tbl">
-  <tr>
-    <td>
-      <iframe id="fr4" src=""></iframe>
-    </td>
-  </tr>
-  <iframe id="fr5" src="about:blank"></iframe>
-</table>
+<frameset>
+  <frame name="win4"></frame>
+  <frame name="win5"></frame>
+</frameset>
