Update test2.html as review suggestions

--- a/html/browsers/the-window-object/accessing-other-browsing-contexts/indexed-browsing-contexts-02.html
+++ b/html/browsers/the-window-object/accessing-other-browsing-contexts/indexed-browsing-contexts-02.html
@@ -53,7 +53,7 @@
   <div style="display:none">
     <iframe id="fr" name="win1" src="test3.html"></iframe>
     <object id="obj" name="win2" type="text/html" data="about:blank"></object>
-    <object type="image/png" src="/green.png"></object>
+    <object type="image/png" src="/images/green.png"></object>
     <embed id="emb" name="win3" type="image/svg+xml" src="/images/green.svg"></embed>
   </div>
 </body>
