--- a/html/browsers/the-window-object/accessing-other-browsing-contexts/test2.html
+++ b/html/browsers/the-window-object/accessing-other-browsing-contexts/test2.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>HTML Test: Accessing other browsing contexts</title>
-<link rel="author" title="Intel" href="http://www.intel.com/" />
+<head>
+  <meta charset="utf-8">
+  <title>HTML Test: Accessing other browsing contexts</title>
+  <link rel="author" title="Intel" href="http://www.intel.com/" />
+</head>
+<body>
+  <object type="image/png" src="/images/green.png"></object>
+  <embed type="image/png" src="/images/green.png"></embed>
+  <frameset>
+    <frame src="about:blank"></frame>
+    <iframe src="about:blank"></iframe>
+  </frameset>
+</body>
