--- a/html/semantics/interactive-elements/the-details-element/toggleEvent.html
+++ b/html/semantics/interactive-elements/the-details-element/toggleEvent.html
@@ -2,21 +2,101 @@
 <meta charset=utf-8>
 <title>The details element</title>
 <link rel="author" title="Denis Ah-Kang" href="mailto:denis@w3.org">
-<link rel=help href="http://www.whatwg.org/specs/web-apps/current-work/multipage/interactive-elements.html#the-details-element">
+<link rel=help href="http://www.whatwg.org/html/#the-details-element">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
-<details>
+<details id=details1>
   <summary>Lorem ipsum</summary>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+</details>
+<details id=details2 open>
+  <summary>Lorem ipsum</summary>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+</details>
+<details id=details3 style="display:none;">
+  <summary>Lorem ipsum</summary>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+</details>
+<details id=details4>
+</details>
+<details id=details6>
+  <summary>Lorem ipsum</summary>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 </details>
 <script>
-  var t = async_test("Adding or removing open from 'details' should fire a toggle event at the 'details' element");
-      details = document.getElementsByTagName('details')[0];
+  var t1 = async_test("Adding open to 'details' should fire a toggle event at the 'details' element"),
+  t2 = async_test("Removing open from 'details' should fire a toggle event at the 'details' element"),
+  t3 = async_test("Adding open to 'details' (display:none) should fire a toggle event at the 'details' element"),
+  t4 = async_test("Adding open from 'details' (no children) should fire a toggle event at the 'details' element"),
+  t6 = async_test("If another task has been queued to run the details notification task steps for this details element, then abort these steps"),
+  details1 = document.getElementById('details1'),
+  details2 = document.getElementById('details2'),
+  details3 = document.getElementById('details3'),
+  details4 = document.getElementById('details4'),
+  details6 = document.getElementById('details6'),
+  loop=false;
 
-  details.ontoggle = t.step_func_done(function() {
-    assert_true(details.open);
+  details1.ontoggle = t1.step_func_done(function(evt) {
+    assert_true(details1.open);
+    assert_true(evt.isTrusted, "event is trusted");
+    assert_false(evt.bubbles, "event doesn't bubble");
+    assert_false(evt.cancelable, "event is not cancelable");
+    assert_true(evt instanceof Event, "event is an instance of Event interface.");
   });
+  details1.open = true; // opens details1
 
-  details.open = true;
+  details2.ontoggle = t2.step_func_done(function(evt) {
+    assert_false(details2.open);
+    assert_true(evt.isTrusted, "event is trusted");
+    assert_false(evt.bubbles, "event doesn't bubble");
+    assert_false(evt.cancelable, "event is not cancelable");
+    assert_true(evt instanceof Event, "event is an instance of Event interface.");
+  });
+  details2.open = false; // closes details2
+
+  details3.ontoggle = t3.step_func_done(function(evt) {
+    assert_true(details3.open);
+    assert_true(evt.isTrusted, "event is trusted");
+    assert_false(evt.bubbles, "event doesn't bubble");
+    assert_false(evt.cancelable, "event is not cancelable");
+    assert_true(evt instanceof Event, "event is an instance of Event interface.");
+  });
+  details3.open = true; // opens details3
+
+  details4.ontoggle = t4.step_func_done(function(evt) {
+    assert_true(details4.open);
+    assert_true(evt.isTrusted, "event is trusted");
+    assert_false(evt.bubbles, "event doesn't bubble");
+    assert_false(evt.cancelable, "event is not cancelable");
+    assert_true(evt instanceof Event, "event is an instance of Event interface.");
+  });
+  details4.open = true; // opens details4
+
+  async_test(function(t) {
+    var details5 = document.createElement("details");
+    details5.ontoggle = t.step_func_done(function(evt) {
+      assert_true(details5.open);
+      assert_true(evt.isTrusted, "event is trusted");
+      assert_false(evt.bubbles, "event doesn't bubble");
+      assert_false(evt.cancelable, "event is not cancelable");
+      assert_true(evt instanceof Event, "event is an instance of Event interface.");
+    })
+    details5.open = true;
+  }, "Adding open to 'details' (not in the document) should fire a toggle event at the 'details' element");
+
+
+  details6.ontoggle = t6.step_func(function() {
+    if (loop) {
+      assert_unreached("toggle event fired twice");
+    } else {
+      assert_true(true);
+      loop = true;
+    }
+  });
+  setTimeout(t6.step_func(function() {
+    if(loop) t6.done();
+  }), 3000);
+  details6.open = true;
+  details6.open = false;
 </script>
