reference python file on server instead of php

--- a/XMLHttpRequest/setrequestheader-open-setrequestheader.htm
+++ b/XMLHttpRequest/setrequestheader-open-setrequestheader.htm
@@ -14,7 +14,7 @@ Test from https://bugzilla.mozilla.org/show_bug.cgi?id=819051
 <script type="text/javascript">
 var test = async_test();
 
-var url = "resources/inspect-headers.php?filter_name=";
+var url = "resources/inspect-headers.py?filter_name=";
 
 var header_tested = "X-appended-to-this";
 var xhr = new XMLHttpRequest();
