--- a/html/browsers/the-window-object/accessing-other-browsing-contexts/indexed-browsing-contexts-01.html
+++ b/html/browsers/the-window-object/accessing-other-browsing-contexts/indexed-browsing-contexts-01.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>HTML Test: Accessing other browsing contexts</title>
+<title>HTML Test: the browsing contexts must be sorted in the order that their containers were inserted into the Document</title>
 <link rel="author" title="Intel" href="http://www.intel.com/" />
+<link rel="help" href="http://www.whatwg.org/specs/web-apps/current-work/multipage/browsers.html#accessing-other-browsing-contexts" />
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <div id="log"></div>
@@ -9,13 +10,6 @@
 
 var t1 = async_test("The window's length must return the number of child browsing contexts(in iframe)");
 function on_load1(fr) {
-  t1.step(function () {
-    assert_equals(fr.contentWindow.length, 2, "The window.length should be 2.");
-    assert_array_equals([fr.contentWindow[0].frameElement, fr.contentWindow[1].frameElement],
-                        [fr.contentDocument.getElementById("fr4"), fr.contentDocument.getElementById("fr5")],
-                        "The child browsing contexts must be sorted in the tree order.");
-  });
-
   t1.step(function () {
     var doc = fr.contentDocument;
     var fr3 = doc.createElement("iframe");
@@ -25,7 +19,7 @@ function on_load1(fr) {
     assert_equals(fr.contentWindow.length, 3, "The window.length should be 3.");
     assert_array_equals([fr.contentWindow[0].frameElement, fr.contentWindow[1].frameElement, fr.contentWindow[2].frameElement],
                         [fr.contentDocument.getElementById("fr4"), fr.contentDocument.getElementById("fr5"), fr.contentDocument.getElementById("fr3")],
-                        "The inserted child browsing contexts must not be sorted in the tree order.");
+                        "The child browsing contexts must be sorted in the order that their containers were inserted into the Document.");
   });
   t1.done();
 }
@@ -44,7 +38,7 @@ function on_load2(fr) {
 <script>
 
 test(function () {
-  assert_equals(window.length, 2, "The window.length should be 23.");
+  assert_equals(window.length, 2, "The window.length should be 2.");
   assert_array_equals([window[0].frameElement, window[1].frameElement],
                       [document.getElementById("fr1"), document.getElementById("fr2")],
                      "The child browsing contexts must be sorted in the tree order.");
