--- a/html/browsers/the-window-object/accessing-other-browsing-contexts/indexed-browsing-contexts-03.html
+++ b/html/browsers/the-window-object/accessing-other-browsing-contexts/indexed-browsing-contexts-03.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <title>HTML Test: Accessing other browsing contexts</title>
+  <title>HTML Test: indexed property of a Window object</title>
   <link rel="author" title="Intel" href="http://www.intel.com/" />
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
