--- a/html/browsers/the-window-object/accessing-other-browsing-contexts/test1.html
+++ b/html/browsers/the-window-object/accessing-other-browsing-contexts/test1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>HTML Test: Accessing other browsing contexts</title>
+<title>HTML Test: child browsing contexts created by iframe elements</title>
 <link rel="author" title="Intel" href="http://www.intel.com/" />
 <table id="tbl">
   <tr>
