--- a/html/browsers/the-window-object/accessing-other-browsing-contexts/test3.html
+++ b/html/browsers/the-window-object/accessing-other-browsing-contexts/test3.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>HTML Test: Accessing other browsing contexts</title>
+<title>HTML Test: child browsing contexts created by frame elements</title>
 <link rel="author" title="Intel" href="http://www.intel.com/" />
 <frameset>
   <frame name="win4"></frame>
