--- a/html/semantics/selectors/pseudo-classes/valid-invalid.html
+++ b/html/semantics/selectors/pseudo-classes/valid-invalid.html
@@ -36,5 +36,5 @@
 
   document.getElementById("text8").value="BBB";
   testSelector(":valid", ["text1", "form1", "text3", "fieldset1", "text5", "text7", "number2"], "':valid' doesn't match new elements that do not satisfy their constraints");
-  testSelector(":invalid", ["text2", "form2", "text4", "fieldset2", "text6", "text8" "number1"], "':invalid' matches new elements that do not satisfy their constraints");
+  testSelector(":invalid", ["text2", "form2", "text4", "fieldset2", "text6", "text8", "number1"], "':invalid' matches new elements that do not satisfy their constraints");
 </script>
