--- a/html/semantics/selectors/pseudo-classes/indeterminate.html
+++ b/html/semantics/selectors/pseudo-classes/indeterminate.html
@@ -12,14 +12,19 @@
 <input type=radio id=radio1 checked>
 <input type=radio name=radiogroup id=radio2>
 <input type=radio name=radiogroup id=radio3>
+<input type=radio name=group2 id=radio4>
+<input type=radio name=group2 id=radio5>
 <progress id="progress1"></progress>
 <progress id="progress2" value=10></progress>
 
 <script>
-  testSelector(":indeterminate", ["radio2", "radio3", "progress1"], "':progress' matches <input>s radio buttons whose radio button group contains no checked input and <progress> elements without value attribute");
+  testSelector(":indeterminate", ["radio2", "radio3", "radio4", "radio5", "progress1"], "':progress' matches <input>s radio buttons whose radio button group contains no checked input and <progress> elements without value attribute");
 
   document.getElementById("radio2").setAttribute("checked", "checked");
-  testSelector(":indeterminate", ["progress1"], "dynamically check a radio input in a radio button group");
+  testSelector(":indeterminate", ["radio4", "radio5", "progress1"], "dynamically check a radio input in a radio button group");
+
+  document.getElementById("radio4").click();
+  testSelector(":indeterminate", ["checkbox1", "progress2"], "click on radio4 which is in the indeterminate state");
 
   document.getElementById("progress1").setAttribute("value", "20");
   testSelector(":indeterminate", [], "adding a value to progress1 should put it in a determinate state");
